--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
-body {background-color: rgb(223, 223, 22);}
+/* DG coxinhas */
+:root{
+    --cor-de-fundo: #ffdf75;
+    --cor-do-texto: #000000;
+    }
+
+body {
+    background-color:var(--cor-de-fundo)}
+
+h1 {
+color: var(--cor-do-texto);
+}    
+
+header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
